# engine-2d

./: Cargo.toml  build.rs
src/: api.rs  lib.rs  main.rs  shader.rs
src/core/: data.rs  event.rs  math.rs  mod.rs  socket.rs  time.rs  window.rs
src/render/: mod.rs  shader.rs  sprite.rs  texture.rs  window.rs
src/render/api/: gl45.rs  mod.rs
