[package]
name = "engine-2d"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["gl45"]
gl45 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { version = "0.54.0", default-features = false }
image = "0.24.8"
itertools = "0.12.1"
paste = "1.0.14"
ecs = { git = "https://github.com/truenotzero/ecs.git" }

[build-dependencies]
gl_generator = "0.14.0"
